--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -51,3 +51,13 @@ body {
   right: 0px;
   position: absolute;
   bottom: 0px; }
+
+.modal-header {
+  background-color: #512DAB;
+  color: white; }
+  .modal-header button {
+    color: floralwhite; }
+
+.modal-body {
+  background-color: #D1C4E9;
+  color: black; }
