--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -74,3 +74,17 @@ body {
     position: absolute;
     bottom: 0px;
 }
+
+.modal-header {
+    background-color: $background-dark;
+    color: white;
+    
+    button {
+        color: floralwhite;
+    }
+}
+
+.modal-body{
+    background-color: $background-pale;
+    color: black;
+}
